@@ -51,7 +51,7 @@ main (int   argc,
     }
   catch (std::exception const& e)
     {
-      sbuild::log_exception(e);
+      sbuild::log_exception_error(e);
       exit(EXIT_FAILURE);
     }
   catch (...)
