@@ -134,7 +134,7 @@ main::run (int   argc,
     }
   catch (std::exception const& e)
     {
-      sbuild::log_exception(e);
+      sbuild::log_exception_error(e);
 
       try
 	{
